--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sharepoint-utilities",
   "version": "0.0.0",
   "devDependencies": {
+    "chai": "^2.3.0",
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-jshint": "~0.11.0",
@@ -12,6 +13,7 @@
     "karma-chai": "^0.1.0",
     "karma-ie-launcher": "^0.1.5",
     "karma-mocha": "^0.1.10",
-    "matchdep": "~0.3.0"
+    "matchdep": "~0.3.0",
+    "mocha": "^2.2.5"
   }
 }
