--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "jquery": "~1.10.2"
+  },
+  "devDependencies": {
+    "bluebird": "~2.9.26"
   }
 }
